--- a/style.css
+++ b/style.css
@@ -6,14 +6,19 @@ body {
   padding: 0;
 }
 
-/* h1, h2... osv {
-font-family: 'Julius Sans One', sans-serif;
-}*/
+h1 {
+  font-family: "Julius Sans One", sans-serif;
+}
 
 .navbar {
   background-color: white;
   display: flex;
   justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
 }
 
 .nav-links {
@@ -74,17 +79,60 @@ button:hover {
   background-color: #b5bca8;
 }
 
-#owner {
-  text-align: center;
-  margin: 50px 0;
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  padding: 20px;
 }
 
-.owner-img {
-  width: 200%;
-  height: 200%;
-  max-width: 400px;
-  border-radius: 50%;
-  object-fit: cover;
-  display: block;
-  margin: 0 auto;
+@media (min-width: 600px) {
+  .grid-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 1200px) {
+  .grid-container {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+    grid-template-areas:
+      "wide wide"
+      "left right";
+  }
+
+  .grid-card:nth-child(1) {
+    grid-area: wide;
+  }
+
+  .grid-card:nth-child(2) {
+    grid-area: left;
+  }
+
+  .grid-card:nth-child(3) {
+    grid-area: right;
+  }
+}
+
+.grid-card {
+  background-color: #b5bca8;
+  border: 1px solid white;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  grid-column: span 4;
+  transition: transform 0.3s;
+}
+
+.grid-card:hover {
+  transform: scale(1.05);
+}
+
+.card-image {
+  width: 100%;
+  height: auto;
+  border-bottom: 1px solid white;
+  margin-bottom: 10px;
+  max-width: 300px;
 }
