--- a/style.css
+++ b/style.css
@@ -82,57 +82,70 @@ button:hover {
 .grid-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
+  gap: 10px;
   padding: 20px;
+  max-width: 1800px;
+  margin: 0 auto;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 1600px) {
   .grid-container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media (min-width: 1200px) {
-  .grid-container {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto;
-    grid-template-areas:
-      "wide wide"
-      "left right";
+    padding: 80px;
   }
 
-  .grid-card:nth-child(1) {
-    grid-area: wide;
-  }
-
-  .grid-card:nth-child(2) {
-    grid-area: left;
-  }
-
-  .grid-card:nth-child(3) {
-    grid-area: right;
-  }
 }
 
 .grid-card {
   background-color: #b5bca8;
   border: 1px solid white;
-  padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 10px;
   grid-column: span 4;
-  transition: transform 0.3s;
+  transition: transform 0.3s, box-shadow 0.3s;
 }
 
 .grid-card:hover {
   transform: scale(1.05);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+@media (min-width: 600px) {
+  .grid-card {
+    grid-column: span 2;
+  }
+}
+
+@media (min-width: 1600px) {
+  .grid-card {
+    grid-column: span 1;
+  }
+
+  .grid-card:nth-child(1) {
+    grid-column: span 3;
+  }
+
+  .grid-card:nth-child(2) {
+    grid-column: span 2;
+  }
+
+  .grid-card:nth-child(3) {
+    grid-column: span 2;
+  }
+
+  .grid-card:nth-child(4) {
+    grid-column: span 1;
+  }
+
+  .grid-card:nth-child(5) {
+    grid-column: span 2;
+  }
 }
 
 .card-image {
   width: 100%;
   height: auto;
-  border-bottom: 1px solid white;
-  margin-bottom: 10px;
   max-width: 300px;
+  transform: scale(1);
 }
