--- a/style.css
+++ b/style.css
@@ -173,11 +173,11 @@ button:hover {
 
 .grid-card {
   background-color: #b5bca8;
-  color: white;
+  color: #381f1f;
   border: 1px solid white;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   padding: 10px;
   transition: transform 0.3s, box-shadow 0.3s;
 }
@@ -200,6 +200,22 @@ button:hover {
 
   .grid-card:nth-child(1) {
     grid-column: span 3;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: left;
+  }
+
+  .grid-card:nth-child(1) .card-image {
+    width: 50%;
+    margin-right: 20px;
+  }
+
+  .grid-card:nth-child(1) .card-text {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
   }
 
   .grid-card:nth-child(2),
