--- a/style.css
+++ b/style.css
@@ -187,6 +187,19 @@ button:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
+.info-link {
+  display: block;
+  text-decoration: none;
+  color: #381f1f;
+  font-weight: 700;
+  padding: 5px;
+  transition: color 0.3s, ease 0.3s;
+}
+
+.info-link:hover {
+  color: white;
+}
+
 @media (min-width: 600px) {
   .grid-container {
     grid-template-columns: repeat(4, 1fr);
