--- a/style.css
+++ b/style.css
@@ -165,49 +165,50 @@ button:hover {
   background-color: #b5bca8;
 }
 
-.form-title {
-  text-align: center;
-  margin-top: 50px;
-  margin-bottom: 20px;
-}
-
-.form-container {
+.content-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  padding: 20px;
-  width: 100%;
+  max-width: 1000px;
   margin: 0 auto;
+  padding: 20px;
 }
 
-.side-content {
+.form-block h1 {
+  text-align: center;
   width: 100%;
-  max-width: 400px;
-  background-color: #f5f3f3;
-  color: #381f1f;
-  padding: 20px;
-  border-radius: 4px;
-  box-shadow: 0 1px 3px 0 rgba(50, 50, 93, 0.15), 0 4px 6px 0 rgba(112, 157, 199, 0.15);
+  margin-bottom: 10px;
 }
 
 form {
-  display: flex;
-  flex-direction: column;
   background-color: #b5bca8;
   color: white;
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+  gap: 10px;
+  width: 90%;
   max-width: 400px;
-  padding: 20px;
   border: none;
   border-radius: 4px;
+}
+
+.side-content {
+  background-color: #f5f3f3;
+  color: #381f1f;
+  padding: 20px;
+  width: 90%;
+  max-width: 300px;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px 0 rgba(50, 50, 93, 0.15), 0 4px 6px 0 rgba(112, 157, 199, 0.15);
 }
 
 fieldset {
   border: none;
   display: flex;
   flex-direction: column;
-  margin: 20px 0;
+  margin: 10px 0;
   border-radius: 4px;
   box-shadow: 0 1px 3px 0 rgba(50, 50, 93, 0.15), 0 4px 6px 0 rgba(112, 157, 199, 0.15);
 }
@@ -262,6 +263,33 @@ input::placeholder {
 .contact-btn:hover {
   background-color: #7c856e;
   color: #381f1f;
+}
+
+@media (min-width: 768px) {
+  .content-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 40px;
+  }
+
+  .form-block {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    align-items: flex-start;
+  }
+
+  form {
+    width: 400px;
+  }
+
+  .side-content {
+    width: 300px;
+    align-self: flex-start;
+  }
+
 }
 
 .grid-container {
