--- a/style.css
+++ b/style.css
@@ -165,11 +165,16 @@ button:hover {
   background-color: #b5bca8;
 }
 
+.form-title {
+  text-align: center;
+}
+
 .content-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  width: 100%;
   max-width: 1000px;
   margin: 0 auto;
   padding: 20px;
@@ -177,7 +182,6 @@ button:hover {
 
 .form-block h1 {
   text-align: center;
-  width: 100%;
   margin-bottom: 10px;
 }
 
@@ -188,7 +192,7 @@ form {
   flex-direction: column;
   padding: 15px;
   gap: 10px;
-  width: 90%;
+  width: 100%;
   max-width: 400px;
   border: none;
   border-radius: 4px;
@@ -198,9 +202,10 @@ form {
   background-color: #f5f3f3;
   color: #381f1f;
   padding: 20px;
-  width: 90%;
+  width: 100%;
   max-width: 300px;
   border-radius: 4px;
+  margin: 0 auto;
   box-shadow: 0 1px 3px 0 rgba(50, 50, 93, 0.15), 0 4px 6px 0 rgba(112, 157, 199, 0.15);
 }
 
@@ -266,19 +271,16 @@ input::placeholder {
 }
 
 @media (min-width: 768px) {
+  .form-title {
+    margin-top: 40px;
+  }
+
   .content-wrapper {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
-    gap: 40px;
-  }
-
-  .form-block {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    align-items: flex-start;
+    gap: 10px;
   }
 
   form {
@@ -288,6 +290,7 @@ input::placeholder {
   .side-content {
     width: 300px;
     align-self: flex-start;
+    margin: 0;
   }
 
 }
